2010-01-19  Piotr Fusik  <fox@scene.pl>
* README, INSTALL: switched from CVS to Git


2010-01-18  Piotr Fusik  <fox@scene.pl>
* win32/foobar2000/foo_asap.cpp: removed masks from file type descriptions


2010-01-17  Piotr Fusik  <fox@scene.pl>
* asap.c: reuse string constants

* asap.c: use parse_cmc() for all CMC clones

* win32/settings_dlg.c, win32/settings_dlg.h, win32/foobar2000/foo_asap.cpp:
  same code for returning song duration and setting duration for song playback

* win32/foobar2000/foo_asap.cpp, win32/gui.rc, win32/settings_dlg.c,
  win32/settings_dlg.h, win32/Makefile, README, PORTS.xml,
  win32/setup/asap.wxs: upgraded to foobar2000 1.0

* win32/gui.rc: included ASAP version and changed quote escaping
  in WASAP XML manifest


2010-01-15  Piotr Fusik  <fox@scene.pl>
* win32/gui.h, gsplayer/Makefile, gsplayer/gspasap.c, win32/Makefile,
  win32/gui.rc, win32/info_dlg.c, win32/info_dlg.h, win32/settings_dlg.c,
  win32/settings_dlg.h, win32/apollo/ASAP_Apollo.cpp,
  win32/foobar2000/foo_asap.cpp, win32/wasap/wasap.c, win32/wasap/wasap.h,
  win32/winamp/in_asap.c:
  split gui.h into info_dlg.h, settings_dlg.h and wasap.h

* win32/gui.c, win32/info_dlg.c, win32/settings_dlg.c, win32/Makefile,
  gsplayer/Makefile: split gui.c into info_dlg.c and settings_dlg.c

* win32/Makefile, INSTALL: updated foobar2000 SDK to 1.0


2010-01-14  Piotr Fusik  <fox@scene.pl>
* asap.c, chksap.pl: allow TYPE D SAPs with no PLAYER


2010-01-13  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c, win32/gui.rc, win32/gui.rc:
  added progress bar for writing WAV file


2010-01-09  Piotr Fusik  <fox@scene.pl>
* csharp/ASAP.ppcs: changed ASAP_State from public to internal

* asap.c, java/ASAP.ppjava, javascript/asap.ppjs:
  reduced number of #ifdefs in ASAP_Generate

* asap.c: fixed RMT time detection
  ("java.lang.ArrayIndexOutOfBoundsException: 15" on aurora_m.rmt)

* asap.c, anylang.h, ASAP.ppjava: Java now reads resources to byte arrays,